--- a/index.html
+++ b/index.html
@@ -228,11 +228,28 @@
 
       const handleSubmit = (e) => {
         e.preventDefault();
+        // 入力値の検証
+        if (!formData.name || !formData.name.trim()) {
+          alert('サービス名を入力してください');
+          return;
+        }
+        if (!formData.amount || formData.amount === '' || formData.amount <= 0) {
+          alert('金額は1円以上で入力してください');
+          return;
+        }
+        if (!formData.nextBilling) {
+          alert('次回請求日を入力してください');
+          return;
+        }
+        
+        const numAmount = typeof formData.amount === 'string' ? parseInt(formData.amount) : formData.amount;
+        const validatedData = { ...formData, amount: numAmount };
+        
         if (editingId) {
-          setSubscriptions(subscriptions.map(sub => sub.id === editingId ? { ...formData, id: editingId } : sub));
+          setSubscriptions(subscriptions.map(sub => sub.id === editingId ? { ...validatedData, id: editingId } : sub));
           setEditingId(null);
         } else {
-          const newSub = { ...formData, id: Date.now() };
+          const newSub = { ...validatedData, id: Date.now() };
           setSubscriptions([...subscriptions, newSub]);
           setHistory([{ id: Date.now(), subId: newSub.id, subName: newSub.name, action: '新規契約', date: new Date().toISOString().split('T')[0], amount: newSub.amount, cycle: newSub.cycle }, ...history]);
         }
@@ -318,7 +335,7 @@
                 <div className="bg-gray-50 rounded-xl p-3">
                   <div className="grid grid-cols-2 gap-2">
                     <input type="text" placeholder="サービス名" value={formData.name} onChange={(e) => setFormData({...formData, name: e.target.value})} className="col-span-2 px-3 py-2 border rounded-lg text-sm" required />
-                    <input type="number" placeholder="金額" value={formData.amount} onChange={(e) => setFormData({...formData, amount: Number(e.target.value)})} className="px-3 py-2 border rounded-lg text-sm" required />
+                    <input type="text" inputMode="numeric" placeholder="金額" value={formData.amount} onChange={(e) => { const val = e.target.value.replace(/[^\d]/g, ''); setFormData({...formData, amount: val === '' ? '' : Math.max(0, parseInt(val)) }); }} className="px-3 py-2 border rounded-lg text-sm" required />
                     <select value={formData.cycle} onChange={(e) => setFormData({...formData, cycle: e.target.value})} className="px-3 py-2 border rounded-lg text-sm">
                       <option value="monthly">月額</option>
                       <option value="yearly">年額</option>
